testsuite/tests/safeHaskell/safeInfered/UnsafeInfered02.stderr
[1 of 2] Compiling UnsafeInfered02_A (.hs -> .o)
[2 of 2] Compiling UnsafeInfered02  (.hs -> .o)

UnsafeInfered02.hs:4:1: error:
    UnsafeInfered02_A: Can't be safely imported!
    The module itself isn't safe.
